--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,17 +3,22 @@ workflows:
     name: Build Android Release APK and AAB
     max_build_duration: 60
     environment:
-      flutter: stable
+      flutter: 3.19.6
       xcode: latest
+
     scripts:
       - name: Clean
         script: flutter clean
+
       - name: Get dependencies
         script: flutter pub get
+
       - name: Build APK
         script: flutter build apk --release
+
       - name: Build App Bundle
         script: flutter build appbundle --release
+
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
       - build/app/outputs/bundle/release/app-release.aab
