--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,8 +2,9 @@ workflows:
   android-release:
     name: Build Android Release APK and AAB
     max_build_duration: 60
+
     environment:
-      flutter: 3.38.3
+      flutter: "3.22.3"
       xcode: latest
 
     scripts:
