--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     max_build_duration: 60
 
     environment:
-      flutter: "3.22.3"
+      flutter: "3.27.1"
       xcode: latest
 
     scripts:
@@ -17,7 +17,7 @@ workflows:
       - name: Build APK
         script: flutter build apk --release
 
-      - name: Build App Bundle
+      - name: Build AAB
         script: flutter build appbundle --release
 
     artifacts:
